examples/test/testpolicy4577.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4577
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key20: value17
      key45: value47
      key1: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value7
      podSelector:
        matchLabels:
          key42: value11
